// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-structure toBeInvalid .not fails for invalid structures 1`] = `
"[2mexpect([22m[31mstructure[39m[2m).[22mnot[2m.[22mtoBeInValid[2m()[22m

Expected: to be [32mvalid[39m
Received: is [31minvalid[39m"
`;

exports[`jest-structure toBeInvalid fails for valid structures 1`] = `
"[2mexpect([22m[31mstructure[39m[2m).[22mtoBeInValid[2m()[22m

Expected: to be [32minvalid[39m
Received: is [31mvalid[39m"
`;

exports[`jest-structure toBeValid .not fails for valid structures 1`] = `
"[2mexpect([22m[31mstructure[39m[2m).[22mnot[2m.[22mtoBeValid[2m()[22m

Expected: to be [32minvalid[39m
Received: is [31mvalid[39m"
`;

exports[`jest-structure toBeValid fails for invalid structures 1`] = `
"[2mexpect([22m[31mstructure[39m[2m).[22mtoBeValid[2m()[22m

Expected: to be [32mvalid[39m
Received: is [31minvalid[39m"
`;

exports[`jest-structure toHaveInvalidAttribute can not be called with empty attribute path:  1`] = `
"toHaveInvalidAttribute must not be called without the attribute path
Example: [2mexpect([22m[31mstructure[39m[2m).[22mtoHaveInvalidAttribute[2m([22m[32mattributePath[39m[2m, [22m[32m[errorMessages][39m[2m)[22m"
`;

exports[`jest-structure toHaveInvalidAttribute can not be called without attribute path 1`] = `
"toHaveInvalidAttribute must not be called without the attribute path
Example: [2mexpect([22m[31mstructure[39m[2m).[22mtoHaveInvalidAttribute[2m([22m[32mattributePath[39m[2m, [22m[32m[errorMessages][39m[2m)[22m"
`;

exports[`jest-structure toHaveInvalidAttribute can not be used with .not 1`] = `"toHaveInvalidAttribute must not be used with .not"`;

exports[`jest-structure toHaveInvalidAttribute when attribute path and error messages are passed fails for valid structures 1`] = `
"[2mexpect([22m[31mstructure[39m[2m).[22mtoBeInValid[2m()[22m

Expected: to be [32minvalid[39m
Received: is [31mvalid[39m"
`;

exports[`jest-structure toHaveInvalidAttribute when only attribute path is passed fails for valid structures 1`] = `
"[2mexpect([22m[31mstructure[39m[2m).[22mtoBeInValid[2m()[22m

Expected: to be [32minvalid[39m
Received: is [31mvalid[39m"
`;

exports[`jest-structure toHaveInvalidAttribute when only attribute path is passed when the attribute is not invalid fails  1`] = `
"[2mexpect([22m[31mstructure[39m[2m).[22mtoHaveInvalidAttribute[2m([22m[32mattributePath[39m[2m)[22m

Expected: name to be [32minvalid[39m
Received: name is [31mvalid[39m"
`;
